--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/news"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/news"
         android:supportsRtl="true"
         android:theme="@style/Theme.Newzer">
+        <activity
+            android:name=".MyWebPage"
+            android:exported="true" />
         <activity
             android:name=".NewsActivity"
             android:exported="true">
